argocd/apps-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "nextime-infra-group"
    alb.ingress.kubernetes.io/group.order: '20'
spec:
  rules:
    - http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: ms-order
                port:
                  number: 80
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: ms-payment
                port:
                  number: 80
          - path: /production
            pathType: Prefix
            backend:
              service:
                name: ms-production
                port:
                  number: 80
          - path: /orchestrator
            pathType: Prefix
            backend:
              service:
                name: ms-orchestrator
                port:
                  number: 80
